# BioMol

./: .gitignore  .readthedocs.yaml  837081.a3m  LICENSE  README.md  biomol.py  dataloader.py  datapath.json  diff.txt  graph_hash_passed_cif.csv  pyproject.toml  restore.py  save_np.py  test.py
BioMol/: BioMol.py  __init__.py  cli.py
BioMol/configs/types/: base.json
BioMol/constant/: chemical.py  path.json  table.py
BioMol/lmdb/: CCD_lmdb.py  MSA_lmdb.py  MSA_lmdb_multi_node.py  cif_lmdb.py  cif_lmdb_merge.py  cif_lmdb_multi_node.py  lmdb_merge.py
BioMol/utils/: MSA.py  contact_graph.py  crop.py  error.py  feature.py  hierarchy.py  parser.py  parser_utils.py  read_lmdb.py  stoer_wagner_algorithm.py
cif_configs/: base.json  cif_fields_classified.json  protein_only.json
configs/: datapath.json
constant/: chemical.py  datapath.py
docs/: conf.py  index.rst
docs/_templates/autosummary/: class.rst
docs/api/: biomol.rst  common.rst  core.rst  index.rst
docs/concepts/: index.rst
docs/concepts/biomol/: feature.rst  index.rst  view.rst
docs/getting_started/: index.rst  installation.rst  overview.rst
docs/getting_started/tutorials/: creating_biomol.ipynb  custom_biomol.ipynb  index.rst
example_cif/: 1qrs.cif  3rqq.cif  4c5p.cif  7q7f.cif  7uhs.cif
log/: cif_lmdb.out  graph_analysis.err  graph_analysis.out  graph_analysis2.err  graph_analysis2.out  graph_clustering.err  graph_clustering.out  msa_lmdb.out  msa_signalp.err  msa_signalp.out  multistate_analysis.err  multistate_analysis.out
plans/: a3m_recipe_book.py  ccd_cif.py  ccd_protocol.py  ccd_recipe_book.py  ccd_recipebook.py  cif_recipe_book.py  example_recipe_book.py
postprocessing/: README.md  compare.py  run.py
postprocessing/instructions/: graph_cluster_instructions.py  seq_cluster_instructions.py  seq_instructions.py
postprocessing/recipes/: graph_cluster.py
postprocessing/submits/: compare_fasta.sh  extract_fasta.sh  graph_cluster.sh  graph_lmdb.sh  remap_seq_hash.sh
preprocessing/: Ab_clustering.py  MSA_remapping.py  check_MSA.py  cif_lmdb.py  extract_H3.py  graph_cluster.py  graph_hash.py  graph_hash_v2.py  metadata.py  parse_CCD.py  search.py  seq_hash_DB.py  seq_hash_DB_merge.py  seq_hash_DB_multi_node.py  seq_hash_graph.py  seq_hash_protein_graph.py  sequence_clustering.py  sequence_clustering_all_molecules.py  sequence_clustering_v2.py  sequence_hash.py  sequence_hash_all_molecules.py
preprocessing/Ab_related/: cdhit_command.txt  extract_H3.py
preprocessing/old/: graph_cluster.py  graph_hash.py  graph_hash_v2.py  metadata.py
scripts/: MSADB_processing.sh  MSADB_processing_multi_node.sh  a3m_lmdb.py  ccd_lmdb.py  cif_lmdb.py  cif_lmdb_merge.sh  cif_processing.sh  cif_processing_multi_node.sh  compare_to_old.py  graph_analysis.sh  graph_cluster.sh  lmdb_merge.sh  msa_processing.sh  multistate_analysis.sh  parse_CCD.py  parse_a3m.py  parse_cif.py  save_np.sh  seq_hash_DB_processing.sh  seq_hash_graph_multi_node.sh  seq_hash_processing.sh  seq_to_str_lmdb_merge.sh  to_nurikit.py
src/biomol/: __init__.py  enums.py  exceptions.py  mapping.py
src/biomol/cif/: __init__.py  mol.py
src/biomol/core/: __init__.py  biomol.py  container.py  enums.py  exceptions.py  feature.py  feature.pyi  index.py  types.py  utils.py  view.py
src/biomol/db/: lmdb_handler.py
src/biomol/io/: blueprint.py  builder.py  cache.py  context.py  cookbook.py  cooker.py  factory.py  isa.py  mmcif2dict.py  parser.py  processor.py  recipe.py  registry.py  schema.py
src/biomol/io/instructions/: a3m_instructions.py  ccd_instructions.py  cif_instructions.py  common_instructions.py
src/biomol/io/mappers/: ccd_mappers.py
src/biomol/io/parsers/: a3m_parser.py  cif_parser.py
src/biomol/utils/: typecheck.py
statistics/: get_edge_score.py  graph_analysis.py  multi_state_protiens.py  multi_state_protiens2.py  pdb_statistics.py
submits/: a3m_lmdb.sh  ccd_lmdb.sh  cif_lmdb.sh  compare.sh  test.sh
test/: test_parser.py
tests/: test_concat.py  test_copy.py  test_utils.py
utils/: MSA.py  contact_graph.py  crop.py  error.py  feature.py  hierarchy.py  parser.py  parser_utils.py  stoer_wagner_algorithm.py  test.py
utils/tmp/: tmp2.cif
