[project]
name = "biomol"
version = "0.2.0"
description = "Biomolecule data loader library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sanggeun Park", email = "psk6950@snu.ac.kr" }]
dependencies = [
    "biopython>=1.85,<2",
    "click>=8.1.8,<9",
    "joblib >=1.4.2,<2",
    "lmdb>=1.6.2,<2",
    "zstandard>=0.24.0,<0.25",
    "typing_extensions>=4.15.0,<5",
    "numpy>=2.2.6,<3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "F722", # Incompatible with jaxtyping
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
biomol = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "~=3.10"
ruff = ">=0.11.6,<0.12"
pytest = ">=8.4.1,<9"
ipykernel = ">=6.30.1,<7"
