[project]
name = "biomol"
version = "0.2.0"
description = "Biomolecule data loader library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sanggeun Park", email = "psk6950@snu.ac.kr" }]
dependencies = [
    "biopython>=1.85,<2",
    "click>=8.1.8,<9",
    "joblib >=1.4.2,<2",
    "lmdb>=1.6.2,<2",
    "zstandard>=0.24.0,<1",
    "typing_extensions>=4.15.0,<5",
    "numpy>=2.2.6,<3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "F722", # Incompatible with jaxtyping
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]
exclude = [
    "docs/*"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
biomol = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "~=3.10"
ruff = ">=0.11.6,<0.12"
pytest = ">=8.4.1,<9"
ipykernel = ">=6.30.1,<7"

[tool.pixi.environments]
docs = { features = ["docs"] }

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.1.3,<9"
sphinx-autobuild = ">=2024.10.3,<2025"
pydata-sphinx-theme = ">=0.16.1,<0.17"
sphinx-copybutton = ">=0.5.2,<0.6"
numpydoc = ">=1.9.0,<2"
sphinx-design = ">=0.6.1,<0.7"

[tool.pixi.feature.docs.tasks]
build = "sphinx-build -b html docs docs/_build/html"
live  = "sphinx-autobuild docs/ docs/_build/html --watch src --open-browser --port 8000"
