[project]
name = "biomol"
version = "1.0.0"
description = "ML-ready biomolecular data handling package."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Howon Lee", email = "hwlee7771@snu.ac.kr" },
  { name = "Sanggeun Park", email = "psk6950@snu.ac.kr" },
]
keywords = [
  "bioinformatics",
  "molecular-biology",
  "structural-biology",
  "machine-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "zstandard>=0.24.0,<1",
  "typing_extensions>=4.15.0,<5",
  "numpy>=2.2.6,<3",
]

[project.urls]
Homepage = "https://biomol.readthedocs.io"
Documentation = "https://biomol.readthedocs.io"
Repository = "https://github.com/CSSB-SNU/BioMol"
Issues = "https://github.com/CSSB-SNU/BioMol/issues"
Changelog = "https://github.com/CSSB-SNU/BioMol/releases"

[project.optional-dependencies]
dev = [
  "ruff>=0.11.6",
  "pytest>=8.4.1",
  "ipykernel>=6.30.1",
  "build>=1.3.0",
  "twine>=6.2.0",
  "hatchling>=1.28.0",
]
docs = [
  "sphinx>=8.1.3",
  "sphinx-autobuild>=2024.10.3",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx-copybutton>=0.5.2",
  "numpydoc>=1.9.0",
  "sphinx-design>=0.6.1",
  "myst-nb>=1.3.0",
  "sphinx-favicon>=1.0.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "F722", # Incompatible with jaxtyping
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
]
exclude = ["docs/conf.py"]
per-file-ignores = { "tests/*" = ["ANN201", "D", "S101", "INP001", "PLR2004"] }

[tool.ruff.lint.pydocstyle]
convention = "numpy"
